The title is no longer cramped

--- a/src/main/resources/static/css/view-activity.css
+++ b/src/main/resources/static/css/view-activity.css
@@ -760,6 +760,7 @@ hr.rounded {
     width:50%;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly !important;
 }
 
 .goal-table {
